--- a/ShowroomBooking/ShowroomBooking/Views/Booking/Booking.cshtml
+++ b/ShowroomBooking/ShowroomBooking/Views/Booking/Booking.cshtml
@@ -56,12 +56,15 @@
             <tr>
                 @for (int i = 0; i < Model.Dagar.Count; i++)
                 {
-                    
-                    <td style="width: 160px;">
-                        <button type="button" asp-controller="Booking" asp-action="Appointment" asp-route-id="">
-                            @(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString())
-                        </button>
-                    </td>
+                    string str = j.ToString();
+                <td style="width: 160px;">
+                    @*<input type="button" asp-controller="Booking" asp-action="Appointment" asp-route-id="str"
+                           text=@(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString())>
+                    </input>*@
+                    <a href="Appointment?i=@i&j=@j ">
+                        <input type="button" value="Click Me" />
+                    </a>
+                </td>
                 }
             </tr>
         }
