--- a/ShowroomBooking/ShowroomBooking/Views/Booking/Booking.cshtml
+++ b/ShowroomBooking/ShowroomBooking/Views/Booking/Booking.cshtml
@@ -42,31 +42,40 @@
 
     </tr>
     <tr>
-        <td style="width: 160px;">Måndag</td>
-        <td style="width: 160px;">Tisdag</td>
-        <td style="width: 160px;">Onsdag</td>
-        <td style="width: 160px;">Torsdag</td>
-        <td style="width: 160px;">Fredag</td>
+        @for (int i = 0; i < Model.Dagar.Count; i++)
+        {
+            <td style="width: 160px;">
+                @Model.Dagar[i].Datum.ToShortDateString()
+            </td>
+        }
+    </tr>
+    <tr>
+        @for (int i = 0; i < Model.Dagar.Count; i++)
+        {
+            <td style="width: 160px;">
+                @Model.Dagar[i].Datum.DayOfWeek
+            </td>
+        }
     </tr>
 
-     @for (int j = 0; j < Model.Dagar[0].Tider.Count; j++)
-        {
-            <tr>
-                @for (int i = 0; i < Model.Dagar.Count; i++)
-                {
-                    string str = j.ToString();
+    @for (int j = 0; j < Model.Dagar[0].Tider.Count; j++)
+    {
+        <tr>
+            @for (int i = 0; i < Model.Dagar.Count; i++)
+            {
+                string str = j.ToString();
                 <td style="width: 160px;">
                     @*<input type="button" asp-controller="Booking" asp-action="Appointment" asp-route-id="str"
-                           text=@(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString())>
-                    </input>*@
+                               text=@(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString())>
+                        </input>*@
                     <a href="Appointment?i=@i&j=@j ">
                         <input type="button" value=@(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString()) />
                     </a>
                 </td>
-                }
-            </tr>
-        }
-    
+            }
+        </tr>
+    }
+
 
 
 </table>
