--- a/ShowroomBooking/ShowroomBooking/Views/Booking/Booking.cshtml
+++ b/ShowroomBooking/ShowroomBooking/Views/Booking/Booking.cshtml
@@ -1,14 +1,30 @@
-﻿
-@model Vecka
+﻿@model Vecka
 
 @{
     ViewData["Title"] = "Booking";
 }
 
-@*<style>
-    table, th, td {
+<style>
+    .button.disabled {
+        opacity: 0.65;
+        cursor: not-allowed;
+    }
+
+    div#first {
         border: 1px solid black;
     }
+
+    th {
+        text-align: center;
+        height: 40px;
+    }
+
+    td {
+        text-align: center;
+        height: 40px;
+    }
+
+    /*
 
     table {
         border-collapse: collapse;
@@ -27,66 +43,74 @@
 
     td:hover {
         background-color: #267aa6;
-    }
+    }*/
 
-   
-</style>*@
+
+</style>
 
 <h2>Booking</h2>
 
+<div id="first" style="width: 880px;">
+    <table cellspacing="20" style="width: 850px; height: 400px;align-content:center;margin-left:10px">
 
-<table style="width: 800px; height: 400px;">
+        @*<tr>
+                <td colspan="5" style="width: 160px;">V.4</td>
 
-    <tr>
-        <td style="width: 160px;">V.4</td>
-
-    </tr>
-    <tr>
-        @for (int i = 0; i < Model.Dagar.Count; i++)
-        {
-            <td style="width: 160px;">
-                @Model.Dagar[i].Datum.ToShortDateString()
-            </td>
-        }
-    </tr>
-    <tr>
-        @for (int i = 0; i < Model.Dagar.Count; i++)
-        {
-            <td style="width: 160px;">
-                @Model.Dagar[i].Datum.DayOfWeek
-            </td>
-        }
-    </tr>
-
-
-    @for (int j = 0; j < Model.Dagar[0].Tider.Count; j++)
-    {
+            </tr>*@
         <tr>
             @for (int i = 0; i < Model.Dagar.Count; i++)
             {
-                string str = j.ToString();
-                <td style="width: 160px;">
-                    @*<input type="button" asp-controller="Booking" asp-action="Appointment" asp-route-id="str"
-                               text=@(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString())>
-                        </input>*@
-                    <a href="Appointment?i=@i&j=@j ">
-                        <input type="button" value=@(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString()) />
-                    </a>
-                </td>
+                <th>
+                    @Model.Dagar[i].Datum.ToShortDateString()
+                </th>
             }
         </tr>
-    }
+        <tr>
+            @for (int i = 0; i < Model.Dagar.Count; i++)
+            {
+                <th>
+                    @Model.Dagar[i].Datum.DayOfWeek
+                </th>
+            }
+        </tr>
+
+        @for (int j = 0; j < Model.Dagar[0].Tider.Count; j++)
+        {
+            <tr>
+                @for (int i = 0; i < Model.Dagar.Count; i++)
+                {
+                    string str = j.ToString();
+                    <td>
+
+                        @if (Model.Dagar[i].Datum.Date >= DateTime.Now.Date)
+                        {
+                            <a href="Appointment?i=@i&j=@j ">
+                                <input type="button" style="background-color : lightgreen;" value=@(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString()) />
+                            </a>
+
+                        }
+                        else
+                        {
+                            <a>
+                                <input type="button" style="background-color : lightpink;" disabled="disabled" value=@(Model.Dagar[i].Tider[j].StartTime.ToShortTimeString() + "-" + Model.Dagar[i].Tider[j].EndTime.ToShortTimeString()) />
+                            </a>
+
+                        }
+                    </td>
+                }
+            </tr>
+        }
 
 
 
-</table>
+    </table>
+</div>
 
 
 
 
 
-
-    @*@for (int j = 0; j < Model.Dagar[0].Tider.Count; j++)
+@*@for (int j = 0; j < Model.Dagar[0].Tider.Count; j++)
     {
         <tr>
             @for (int i = 0; i < Model.Dagar.Count; i++)
@@ -103,20 +127,20 @@
 
 
 
-    @*<div class="row">
-        <div class="col-md-6">
+@*<div class="row">
+    <div class="col-md-6">
 
-            <form method="post" asp-controller="Booking" asp-action="Booking">
+        <form method="post" asp-controller="Booking" asp-action="Booking">
 
-                <div class="form-group">
-                    <label asp-for="AppointSubject"></label>
-                    <input asp-for="AppointSubject" class="form-control" />
-                </div>
+            <div class="form-group">
+                <label asp-for="AppointSubject"></label>
+                <input asp-for="AppointSubject" class="form-control" />
+            </div>
 
 
 
-                <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-success" />
-                </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-success" />
+            </div>
 
-            </form>*@
+        </form>*@
